# bcnf

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.sh
.github/workflows/: pytest.yml
configs/: config.yaml  old.yaml  throw_upwards.yaml  throw_upwards_no_a.yaml  trainer_config.yaml  trajectory_FC.yaml
configs/data/: big.yaml  config.yaml  throw_upwards_no_a.yaml
configs/runs/: dev_config.yaml  trajectory_FC.yaml  trajectory_FC_large.yaml  trajectory_FC_small.yaml  trajectory_FrExp_TRF_large_large.yaml  trajectory_LSTM_2_large.yaml  trajectory_LSTM_2_large_small_cond.yaml  trajectory_LSTM_2_large_small_cond_hybrid.yaml  (+22 more)
experimental/: NLL.ipynb  analyze_wind.ipynb  ballistic_parameters.csv  checkpoint.pkl  data_analysis.ipynb  data_shape.ipynb  fft_layer.ipynb  generate_data.ipynb  lstm.ipynb  modify_data.ipynb  remove_videos.ipynb  test_bayescv.ipynb  test_bayescv_RF.ipynb  test_bayescv_analysis.ipynb  test_bayescv_improved.ipynb  test_cv.ipynb  test_load_data.ipynb  test_physics.ipynb  test_poi.ipynb  test_prior_estimation.ipynb  test_resimulation.ipynb  test_sample.ipynb  test_training.ipynb  test_training_new.ipynb  test_video_to_tensor.ipynb  training_log.ipynb  trf_tokens.ipynb  weights_and_biases_first_test.ipynb
notebooks/: analyze_hyperparameters.ipynb  calibration.ipynb  compare_parameters.ipynb  irl_posteriors.ipynb  optimize_hyperparameters.ipynb  resimulation.ipynb  resimulation_videos.ipynb  train.ipynb  train_old.ipynb  train_pretrained.ipynb
tests/: camera_testing.ipynb  test_cnf.py  test_poi.ipynb  video_processing_test.ipynb
(+122 files in other folders)
